[gd_scene load_steps=16 format=2]

[ext_resource path="res://fonts/norwester.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/scripts/HUD.gd" type="Script" id=2]
[ext_resource path="res://fonts/Freedom-10eM.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/Lobster_1.3.otf" type="DynamicFontData" id=4]
[ext_resource path="res://res/GUI_set_0/imgs/board&bar/board_0.png" type="Texture" id=5]
[ext_resource path="res://res/GUI_set_0/imgs/board&bar/board_2.png" type="Texture" id=6]
[ext_resource path="res://fonts/Freedom-nZ4J.otf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 4
outline_color = Color( 0.968627, 0.968627, 0.968627, 1 )
font_data = ExtResource( 3 )
fallback/0 = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFont" id=10]
size = 24
font_data = ExtResource( 7 )

[sub_resource type="InputEventAction" id=2]
action = "ui_select"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 26
outline_size = 1
font_data = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 101.09 ]
}

[node name="Timer_msg" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="lbl_title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.8452
margin_top = -173.377
margin_right = 206.155
margin_bottom = -93.3766
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0588235, 0.933333, 1, 1 )
text = "Jump"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="lbl_title2" type="Label" parent="lbl_title"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -246.149
margin_top = -93.0414
margin_right = -4.14886
margin_bottom = -13.0414
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0588235, 0.933333, 1, 1 )
text = "Jump"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -503.0
margin_top = -133.0
margin_right = 513.0
margin_bottom = 277.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
shortcut_in_tooltip = false
action_mode = 0
shortcut = SubResource( 3 )
text = "< Press to start >"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="playerInfo" type="Node2D" parent="."]
position = Vector2( 40.5441, 101.151 )

[node name="NinePatchRect" type="NinePatchRect" parent="playerInfo"]
margin_right = 105.0
margin_bottom = 84.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="lbl_" type="Label" parent="playerInfo"]
margin_left = 19.418
margin_top = 16.582
margin_right = 188.418
margin_bottom = 30.582
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Level : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_2" type="Label" parent="playerInfo"]
margin_left = 19.418
margin_top = 35.8091
margin_right = 188.418
margin_bottom = 49.8091
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Coins : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_3" type="Label" parent="playerInfo"]
margin_left = 19.418
margin_top = 54.2002
margin_right = 188.418
margin_bottom = 68.2002
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Last stage reached : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leaderBoard" type="Node2D" parent="."]
position = Vector2( 742.751, 99.8972 )

[node name="NinePatchRect" type="NinePatchRect" parent="leaderBoard"]
margin_right = 129.0
margin_bottom = 204.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="lbl_msg" type="Label" parent="leaderBoard"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 16.7461
margin_top = 23.8675
margin_right = 241.746
margin_bottom = 57.8675
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.505882, 1, 0.133333, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Top Scores"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="leaderBoard"]
margin_left = 27.0
margin_top = 56.0
margin_right = 234.0
margin_bottom = 387.0
items = [ "AAAA", null, false, "000000", null, false, "BBBB", null, false, "000000", null, false ]
max_columns = 2
same_column_width = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer_msg" to="." method="_on_Timer_msg_timeout"]
[connection signal="pressed" from="btn_start" to="." method="_on_btn_start_pressed"]
